# jj2

./: Cargo.toml  index.html
assets/: abaddon_bold.kayak_font
assets/textures/: dapper_panda.aseprite  shop_bg - Copy.aseprite  shop_bg.aseprite
credits/: CREDITS.md
src/: audio.rs  lib.rs  loading.rs  main.rs  player.rs  scene.rs
src/actions/: mod.rs
src/barter/: customers.rs  mod.rs
src/ui/: menu.rs  mod.rs  scene_ui.rs
src/ui/game_scene/: barter_screen.rs  mod.rs  scene_ui.rs
