[package]
name = "vampire_shopire"
version = "0.1.0"
publish = false
authors = ["Noah Shomette", "Kolbe Shomette"]
edition = "2021"
exclude = ["Shop Management"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = []

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "wav",
    "x11", ] }

bevy_kira_audio = { version = "0.13" }
bevy_asset_loader = { version = "0.14.1", features = ["stageless"] }
bevy_tweening = "0.6"
iyes_loopless = "0.9.1"
bevy_mod_aseprite = "0.3"
leafwing-input-manager = "0.7.1"
bevy_tiled_camera = "0.5.2"
seldom_state = "0.3"
rand = { version = "0.8.3" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.27", default-features = false }
image = { version = "0.24", default-features = false }
bevy_pixel_camera = "0.3.0"

[build-dependencies]
embed-resource = "1.4"

[patch.crates-io]
bevy_aseprite_reader = { git = "https://github.com/mdenchev/bevy_aseprite", branch = "main"}
